# lab_oop_6

./: CMakeLists.txt  README.md
include/: Game.h
include/Factory/: NPCFactory.h
include/NPC/: Druid.h  NPC.h  Orc.h  Squirrel.h
include/Observer/: ConsoleObserver.h  FileObserver.h  Observer.h
include/Visitor/: BattleVisitor.h
src/: main.cpp
src/Factory/: NPCFactory.cpp
src/NPC/: Druid.cpp  NPC.cpp  Orc.cpp  Squirrel.cpp
src/Observer/: ConsoleObserver.cpp  FileObserver.cpp
src/Visitor/: BattleVisitor.cpp
